# nava

./: CMakeLists.txt  README  SYNTAX  build-cross-arm-android.sh  build-lib.sh  build-script.sh  fibo.nv  main.cpp  parser.y  test.nv  tokens.l
ast/: functions.cpp  globals.h  nodes.cpp  nodes.h  variables.cpp
examples/: fibo.nv  pi-gauss.nv  pi.nv
memory/: memory.cpp  memory.h
stdlib/: stdlib.cpp
